--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,7 +1,53 @@
 <%- include('../partials/header') -%>
-
+<section class="top" ></section>
 <h1><%= title %></h1>
-<p>Welcome to <%= title %> </p>
-<p></p>
+<p>
+  Welcome to <%= title %>
+  
+</p>
+<div class="mx-auto col-10">
+  <form class="form-inline mr-auto" action="/users" method="GET">
+    <input
+      class="form-control col-10"
+      type="search"
+      placeholder="Search for a cocktail or ingredients seperated by commas (E.g. 'margarita' or 'vodka, orange juice' )"
+      aria-label="Search"
+      name="userQuery"
+    />
+    <button class="form-control btn btn-outline-success col-2" type="submit">
+      Search
+    </button>
+    <!-- <select name="filter" id="filter">
+      Filter by
+      <option value="false">cocktail</option>
+      <option value="true">ingredient</option>
+    </select> -->
+  </form>
+</div>
+
+<section class="main" >
+  
+  <div class="row row-cols-1 row-cols-md-3">
+    <% if (results.drinks !== null) { results.drinks.forEach((drink) => { %>
+      <div class="col mb-4">
+        <div class="card h-100">
+          <img src="<%= drink.strDrinkThumb %>" class="card-img-top" alt="drink-thumbnail">
+          <div class="card-body">
+            <h5 class="card-title"><%= drink.strDrink %></h5>
+            <p class="card-text"><%= drink.strIngredient1 %>, <%= drink.strIngredient2  %></p>
+          </div>
+        </div>
+      </div>
+
+
+<!-- 
+  <div class="drink">
+    <h3 class="drinkTitle" >c</h3>
+    <img class="drinkThumb" src=" <%= drink.strDrinkThumb %>" alt="drink thumbnail" />
+    <p class="drinkInstructions" ><%= drink.strInstructions %></p>
+  </div> -->
+  <% });} %>
+</div>
+</section>
 
 <%- include('../partials/footer') -%>
