--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -17,27 +17,26 @@
     <button class="form-control btn btn-outline-success col-2" type="submit">
       Search
     </button>
-    <!-- <select name="filter" id="filter">
-      Filter by
-      <option value="false">cocktail</option>
-      <option value="true">ingredient</option>
-    </select> -->
+    
   </form>
 </div>
 
 <section class="main" >
   
   <div class="row row-cols-1 row-cols-md-3">
-    <% if (results.drinks !== null) { results.drinks.forEach((drink) => { %>
+    <% if (response.drinks !== null) { response.drinks.forEach((drink) => { %>
       <div class="col mb-4">
-        <div class="card h-100">
-          <img src="<%= drink.strDrinkThumb %>" class="card-img-top" alt="drink-thumbnail">
-          <div class="card-body">
-            <h5 class="card-title"><%= drink.strDrink %></h5>
-            <p class="card-text"><%= drink.strIngredient1 %>, <%= drink.strIngredient2  %></p>
+        <a href="/drinks/<%= drink.idDrink %>">
+          <div class="card h-100">
+            <img src="<%= drink.strDrinkThumb %>" class="card-img-top" alt="drink-thumbnail">
+            <div class="card-body">
+              <h5 class="card-title"><%= drink.strDrink %></h5>
+              <p class="card-text"><%= drink.strIngredient1 %>, <%= drink.strIngredient2  %></p>
+            </div>
           </div>
+        </a>
         </div>
-      </div>
+      
 
 
 <!-- 
