--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,7 @@
           <ul class="navbar-nav mr-auto">
             <% if (user) { %>
             <li class="nav-item active">
-              <a class="nav-link" href="/"><span> <%= user.name %>'s cocktails </span> <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/users/drinks"><span> <%= user.name %>'s cocktails </span> <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a href="/logout">Log Out</a>
