--- a/views/drinks/index.ejs
+++ b/views/drinks/index.ejs
@@ -6,7 +6,7 @@
   
 </p>
 <div class="mx-auto col-10">
-  <form class="form-inline mr-auto" action="/users" method="GET">
+  <form class="form-inline mr-auto" action="/drinks" method="GET">
     <input
       class="form-control col-10"
       type="search"
