--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box;
 }
+body {
+  min-height: 100%;
+}
 
 section.main {
   padding: 10vw;
@@ -15,4 +18,40 @@ a {
 
 .drinkThumb{
   max-width: 100px;
+}
+
+#drink-details {
+  margin: 0 auto;
+  max-width: 90%;
+}
+
+.drink-name {
+  text-align: center;
+}
+#add-drink {
+  display: block;
+  margin: 0 auto;
+}
+
+#edit {
+  display: block;
+}
+
+.footer-padding {
+	padding-bottom: 60px;
+}
+
+.footer {
+	/* position: fixed; */
+	text-align: center;
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+	background-color: #382933;
+}
+
+.footer p {
+	margin-top: 25px;
+	font-size: 12px;
+  color: #fff;
 }
