--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
         </button>
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav ml-auto">
             <% if (user) { %>
             <li class="nav-item active">
               <a class="nav-link" href="/users/drinks"><span> <%= user.name %>'s cocktails </span> <span class="sr-only">(current)</span></a>
