add custom property to drinkSchema; Refactor drink Update

--- a/views/drinks/index.ejs
+++ b/views/drinks/index.ejs
@@ -15,8 +15,8 @@
       Search
     </button>
     <select name="filter" id="">
-      <option value="<%= filterOptions.byDrinkName %>">Filter by cocktail's name</option>
-      <option value="<%= filterOptions.byIngredientName %>">Filter by ingredient's name</option>
+      <option value="<%= filterOptions.byDrinkName %>">Search by cocktail's name</option>
+      <option value="<%= filterOptions.byIngredientName %>">Search by ingredient's name</option>
     </select>
     
   </form>
