--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -6,10 +6,11 @@
   <div class="row row-cols-1 row-cols-md-3">
     <% drinks.forEach((drink) => { %>
       <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100 ">
             <img src="<%= drink.image %>" class="card-img-top" alt="drink-thumbnail">
-            <div class="card-body">
+            <div class="card-body <%= drink.custom %>">
               <h3 class="card-title drink-name"><%= drink.name %></h3>
+              <!-- <small class="<%= drink.custom %>" >(Custom)</small> -->
             </div>
             <a class="btn btn-sm btn-primary" href="/users/drinks/<%= drink._id %>" >See Details</a>
           </div>
