--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -16,15 +16,56 @@
               <p class="card-text"> <strong>Instructions:</strong> <%= drink.instructions %></p>
             </div>
             <% if (user) { %>
-              <a class="btn btn-sm btn-warning" href="/users/drinks/<%= drink._id %>/edit">Edit</a>
-              <form action="/users/drinks/<%= drink._id %>?_method=DELETE" method="POST" >
-                <button id="edit" name="drink" class="btn btn-danger" type="submit">Delete</button>
+              <a class="btn btn btn-warning" href="/users/drinks/<%= drink._id %>/edit">Edit</a>
+              <form id="delete-fav-drink-form" action="/users/drinks/<%= drink._id %>?_method=DELETE" method="POST" >
+                <button id="edit-fav-drink" name="drink" class="btn btn-danger" type="submit">Delete</button>
               </form>
               <% } %>
           </div>
         </div>
   </div>
-  <a class="btn btn-primary" href="/users/drinks">Return to my cocktails</a>
 </section>
-
+<hr>
+<section id="comments" >
+  <h3>Comments</h3>
+  <% if(user) { %>
+    <form action="/users/drinks/<%= drink._id %>/comments" method="POST">
+      <div class="form-group">
+        <label for="drink-comment">Write a comment about this drink</label>
+        <textarea class="form-control" id="drink-comment" name="content" rows="3" maxlength="300"></textarea>
+      </div>
+      <button class="btn btn-success" type="submit">Add comment</button>
+    </form>
+    <% }%>
+    
+  <% drink.comments.forEach((comment) => { %>
+<br>
+    <div class="card">
+      <div class="card-header">
+        <ul class="nav nav-pills card-header-pills">
+          <li class="nav-item">
+            <img class="user-avatar" src="<%= comment.author.avatar %>" alt="user-avatar">
+          </li>
+          <li class="nav-item mx-2">
+            <p><%= comment.author.name %></p>
+          </li>
+        </ul>
+      </div>
+      <div class="card-body">
+        <div>
+          <p class="card-text"><%= comment.content %></p>
+        </div>
+         <% if (user && comment.author._id.equals(user.id)) { %>
+        <button class="btn btn-sm btn-danger" >Delete comment</button>
+        <% } %>
+        <!-- <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div> -->
+<br>
+    <% }); %>
+       
+      
+    </section>
+    
+    <a class="btn btn-primary" href="/users/drinks">Return to my cocktails</a>
 <%- include('../partials/footer') -%>
