--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,21 +11,21 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Cocktails</a>
+        <a class="navbar-brand" href="/"><h1>Cocktails</h1></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
             <% if (user) { %>
-            <li class="nav-item active">
+            <li class="nav-item navigation-items active">
               <a class="nav-link" href="/users/drinks"><span> <%= user.name %>'s cocktails </span> <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a href="/logout">Log Out</a>
+            <li class="nav-item navigation-items">
+                <a class="log" href="/logout">Log Out</a>
               <% } else { %>
-                <a href="/auth/google">Login with Google</a>
+                <a class="log" href="/auth/google">Login with Google</a>
               <% } %>            
             </li>
           </ul>
