--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') -%>
 
 <section class="main" >
-  <a id="create-new-cocktail" class="btn btn-primary">Create a New Cocktail</a>
+  <a id="create-new-cocktail" class="btn btn-primary" href="/users/drinks/new">Create a New Cocktail</a>
   
   <div class="row row-cols-1 row-cols-md-3">
     <% drinks.forEach((drink) => { %>
