--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,8 @@
 * {
   box-sizing: border-box;
 }
-body {
-  min-height: 120%;
+html, body {
+  min-height: 100vh;
 }
 
 section.main {
@@ -84,11 +84,11 @@ a.log {
 }
 
 .footer {
-  /* position: fixed; */
+  position: relative;
   text-align: center;
   bottom: 0;
   width: 100%;
-  height: 60px;
+  height: 7vh;
   background-color: #382933;
 }
 
