--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,9 +4,12 @@
 html, body {
   min-height: 100vh;
 }
+body {
+  position: relative
+}
 
 section.main {
-  padding: 10vw 0;
+  padding: 5vw 0;
   max-width: 85%;
   margin: 0 auto;
   color: #382933;
@@ -84,11 +87,11 @@ a.log {
 }
 
 .footer {
-  position: relative;
+  position: absolute;
   text-align: center;
   bottom: 0;
   width: 100%;
-  height: 7vh;
+  /* height: 7vh; */
   background-color: #382933;
 }
 
