--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -21,7 +21,7 @@
 
 </section>
 <form action="/users/drinks?_method=DELETE" method="POST">
-<button type="submit" >DELETE ALL</button>
+<button class="btn btn-small btn-danger" type="submit" >DELETE ALL</button>
 </form>
 
 
