--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,11 @@
     <title><%= title %></title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/"><h1>Cocktails</h1></a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navigation">
+        <a class="navbar-brand" href="/">
+          <h1>Cocktails</h1>
+          <!-- <img id="logo" src="/images/cocktail-logo.gif" alt="coktail-logo"> -->
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
