add error message when user tries to create/update a cocktail with a name already used

--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -7,6 +7,9 @@
   <div class="form-group">
     <label for="cocktail-name">Cocktail Name</label>
     <input type="text" class="form-control" id="cocktail-name" name="drinkName" required>
+    <% if(message) { %>
+    <small class="message" ><%= message %></small>
+    <% } %>
   </div>
 <br>
   
