--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
           <ul class="navbar-nav ml-auto">
             <% if (user) { %>
             <li class="nav-item navigation-items active">
-              <a class="nav-link" href="/users/drinks"><span> <%= user.given_name %>'s cocktails </span> <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/users/drinks"><span> <%= user.givenName %>'s cocktails </span> <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item navigation-items">
                 <a class="log" href="/logout">Log Out</a>
