--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -18,17 +18,8 @@
         </div>
         <% }); %>
 </div>
-
 </section>
-<form action="/users/drinks?_method=DELETE" method="POST">
+<form id="delete-all-form" action="/users/drinks?_method=DELETE" method="POST">
 <button class="btn btn-small btn-danger" type="submit" >DELETE ALL</button>
 </form>
-
-
-
-
-
-
-
-
 <%- include('../partials/footer') -%>
