--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@
           <ul class="navbar-nav ml-auto">
             <% if (user) { %>
             <li class="nav-item navigation-items active">
-              <a class="nav-link nav-buttons" href="/users/drinks"><span> <%= user.name %>'s cocktails </span> <span class="sr-only">(current)</span></a>
+              <a class="nav-link nav-buttons" href="/users/drinks"><span> <%= user.name.split(' ')[0] %>'s cocktails </span><img id="shaker-icon" src="/images/shaker.png" alt="shaker-icon"> <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item navigation-items">
                 <a class="log nav-buttons" href="/logout">Log Out</a>
