--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,7 @@ body {
 
 .navigation {
   background-color: #1a1a2e!important;
+  padding-bottom: 0;
   margin-bottom: 2vh;
 }
 
@@ -25,7 +26,9 @@ body {
 }
 
 #logo {
-  max-width: 180px;
+  max-width: 400px;
+  margin-left: 1vw;
+  
 }
 
 #shaker-icon {
