change username display in comments section

--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -47,7 +47,7 @@
             <img class="user-avatar" src="<%= comment.author.avatar %>" alt="user-avatar">
           </li>
           <li class="nav-item mx-2">
-            <p><%= comment.author.name %></p>
+            <p><%= comment.author.name.split(' ')[0] %></p>
           </li>
         </ul>
       </div>
